@@ -3,6 +3,8 @@ package edu.colorado.phet.lightreflectionandrefraction.modules.prisms;
 
 import edu.colorado.phet.common.phetcommon.util.Function1;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
+import edu.colorado.phet.common.phetcommon.util.VoidFunction0;
+import edu.colorado.phet.common.phetcommon.util.VoidFunction1;
 import edu.colorado.phet.common.piccolophet.nodes.ControlPanelNode;
 import edu.colorado.phet.lightreflectionandrefraction.view.LightReflectionAndRefractionCanvas;
 import edu.colorado.phet.lightreflectionandrefraction.view.MediumControlPanel;
@@ -37,9 +39,28 @@ public class PrismsCanvas extends LightReflectionAndRefractionCanvas<PrismsModel
         }};
         addChild( prismMediumControlPanel );
 
-        final LaserControlPanelNode laserControlPanelNode = new LaserControlPanelNode( model.manyRays, laserView, model.getLaser().color, model.showReflections ) {{
+        final LaserControlPanelNode laserControlPanelNode = new LaserControlPanelNode( model.manyRays, laserView, model.getLaser().color, model.showReflections, showNormal ) {{
             setOffset( stageSize.width - getFullBounds().getWidth() - 10, prismMediumControlPanel.getFullBounds().getMinY() - 10 - getFullBounds().getHeight() );
         }};
         addChild( laserControlPanelNode );
+
+        showNormal.addObserver( new SimpleObserver() {
+            public void update() {
+                model.updateModel();//could do this completely in the view, but simpler just to have the model recompute everything
+            }
+        } );
+        model.addIntersectionListener( new VoidFunction1<Intersection>() {
+            public void apply( Intersection intersection ) {
+                if ( showNormal.getValue() ) {
+                    final IntersectionNode node = new IntersectionNode( transform, intersection );
+                    intersection.addCleanupListener( new VoidFunction0() {
+                        public void apply() {
+                            removeChild( node );
+                        }
+                    } );
+                    addChild( node );
+                }
+            }
+        } );
     }
 }
