@@ -1,3 +1,4 @@
+Added normal lines
 Rearranged controls
 Added a control to show/hide reflections
 Improved dispersion function
